[gd_scene load_steps=19 format=3 uid="uid://c432fo8bftnlq"]

[ext_resource type="Script" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Script" path="res://classes/texture_rect_url.gd" id="2_moj0t"]
[ext_resource type="PackedScene" uid="uid://bj88ejvy2jlin" path="res://app_item.tscn" id="2_wdgc4"]
[ext_resource type="Texture2D" uid="uid://2ey53ww266rr" path="res://icons/a_button.svg" id="3_8hryx"]
[ext_resource type="Texture2D" uid="uid://num35sdixvrw" path="res://icons/b_button.svg" id="4_lu0eo"]
[ext_resource type="Texture2D" uid="uid://cr5l3amflx6gn" path="res://icons/dpad.svg" id="5_wtwcv"]
[ext_resource type="Texture2D" uid="uid://qavvd8y0jin4" path="res://icons/wifi-off.svg" id="6_56es7"]

[sub_resource type="Theme" id="Theme_1csnl"]
default_font_size = 19

[sub_resource type="LabelSettings" id="LabelSettings_q66ng"]
font_color = Color(1, 0.32549, 0.352941, 1)

[sub_resource type="LabelSettings" id="LabelSettings_xjdy2"]
font_color = Color(0, 0.960784, 0.619608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k85uw"]
bg_color = Color(0, 0, 0, 0.819608)

[sub_resource type="LabelSettings" id="LabelSettings_v73hk"]
font_size = 19

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nrvmp"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ryde"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ukv0q"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hondu"]
font_size = 19

[sub_resource type="LabelSettings" id="LabelSettings_rfj5a"]
font_size = 17

[sub_resource type="LabelSettings" id="LabelSettings_bx47k"]
font_size = 17

[node name="Main" type="CanvasLayer"]
script = ExtResource("1_ig7tw")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_1csnl")
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StatusBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 26)
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusBar"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Error downloading app"
label_settings = SubResource("LabelSettings_q66ng")

[node name="SuccessLabel" type="Label" parent="MarginContainer/VBoxContainer/StatusBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Downloaded Scrappy v1.0.1.muxzip"
label_settings = SubResource("LabelSettings_xjdy2")

[node name="SplitContainer" type="SplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
dragger_visibility = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/SplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="AppsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SplitContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AppItem" parent="MarginContainer/VBoxContainer/SplitContainer/ScrollContainer/AppsList" instance=ExtResource("2_wdgc4")]
layout_mode = 2
app_title = "App Name"

[node name="InfoContainer" type="BoxContainer" parent="MarginContainer/VBoxContainer/SplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
vertical = true

[node name="AppImage" type="TextureRect" parent="MarginContainer/VBoxContainer/SplitContainer/InfoContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
expand_mode = 2
stretch_mode = 5
script = ExtResource("2_moj0t")

[node name="NoImageLabel" type="Label" parent="MarginContainer/VBoxContainer/SplitContainer/InfoContainer/AppImage"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "No image."
horizontal_alignment = 1
vertical_alignment = 1

[node name="AppDesc" type="RichTextLabel" parent="MarginContainer/VBoxContainer/SplitContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Example text."

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_8hryx")
expand_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Download"

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_lu0eo")
expand_mode = 2

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Control2" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_wtwcv")
expand_mode = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Scroll"

[node name="HTTPDownloader" type="HTTPRequest" parent="."]

[node name="DownloadOverlay" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k85uw")

[node name="VBoxContainer" type="VBoxContainer" parent="DownloadOverlay"]
layout_mode = 2
alignment = 1

[node name="ProgressLabel" type="Label" parent="DownloadOverlay/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Downloading..."
label_settings = SubResource("LabelSettings_v73hk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="DownloadOverlay/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_nrvmp")
theme_override_styles/fill = SubResource("StyleBoxFlat_0ryde")
show_percentage = false

[node name="LoadingOverlay" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ukv0q")

[node name="VBoxContainer" type="VBoxContainer" parent="LoadingOverlay"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="OfflineIcon" type="TextureRect" parent="LoadingOverlay/VBoxContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 2
texture = ExtResource("6_56es7")
stretch_mode = 5

[node name="LoadingLabel" type="Label" parent="LoadingOverlay/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Getting store data..."
label_settings = SubResource("LabelSettings_hondu")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitPrompt" type="HBoxContainer" parent="LoadingOverlay/VBoxContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(0.6, 0.6, 0.6, 1)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="LoadingOverlay/VBoxContainer/QuitPrompt"]
layout_mode = 2
text = "Press"
label_settings = SubResource("LabelSettings_rfj5a")

[node name="TextureRect" type="TextureRect" parent="LoadingOverlay/VBoxContainer/QuitPrompt"]
layout_mode = 2
texture = ExtResource("4_lu0eo")

[node name="Label2" type="Label" parent="LoadingOverlay/VBoxContainer/QuitPrompt"]
layout_mode = 2
text = "to quit."
label_settings = SubResource("LabelSettings_bx47k")
